--- a/src/social.html
+++ b/src/social.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+    <style>
 
-<head>
-<style>
+    </style>
 
-body {background: lightpink}
-h1 {color: lightgreen}
+    </head>
+    <body>
+        <h1> Message Center </h1>
+        <ul id="messages"></ul>
+        <input id="textbox" type="text">
+        <button id=send>send</button>
 
-</style>
-<link rel="social" href="social.css">
-<script src="social.js"></script>
+        <script src="social.js"></script>
 
-</head>
-<body>
-    <h1> Message Center </h1>
-
-    <button id=send>send</button>
-</body>
+    </body>
 </html>
